--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
+    "clsx": "^2.1.1",
+    "motion": "^12.3.1",
     "next": "14.2.23",
     "noisejs": "^2.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "three": "^0.173.0"
+    "tailwind-merge": "^3.0.1",
+    "three": "^0.173.0",
+    "three-globe": "^2.41.12"
   },
   "devDependencies": {
     "@types/node": "^20",
